Enable Codecov.io integration with Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: go
 go: "1.13"
-script: scripts/build.sh --release
-gobuild_args: -mod vendor -ldflags="-w -s"
+script: 
+- scripts/build.sh --release
+- go test -race -mod vendor -ldflags="-w -s" -coverprofile=coverage.txt -covermode=atomic
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
