--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ go: "1.13"
 script: 
 - scripts/build.sh --release
 - scripts/test.sh -race -coverprofile=coverage.txt -covermode=atomic
+- scripts/vet.sh
 after_success:
   - bash <(curl -s https://codecov.io/bash)
