Update travis.yml to release on successful builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ script:
 - scripts/test.sh -race -coverprofile=coverage.txt -covermode=atomic
 - scripts/vet.sh
 after_success:
-  - scripts/tag.sh
+  - scripts/travis-release.sh
   - bash <(curl -s https://codecov.io/bash)
